<resources>
    <string name="app_name">Go2Shop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_cerrar_sesion">Cerrar sesión</string>
    <string name="action_search">Buscar</string>
    <string name="action_check">Check</string>
    <string name="action_save">Save</string>

    <!--Generales-->
    <string name="text_empty"> </string>
    <string name="error_field_empty">Campo vacío</string>
    <string name="btn_accept">Aceptar</string>
    <string name="btn_save">Guardar</string>
    <string name="btn_edit">Editar</string>
    <string name="btn_update">Actualizar</string>
    <string name="btn_exit">Salir</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="save_data_ok">Información guardada</string>
    <string name="save_data_error">Error al guardar. Intente nuevamente</string>
    <string name="update_data_ok">Información actualizada</string>
    <string name="update_data_error">Error al actualizar. Intente nuevamente</string>
    <string name="delete_data_ok">Información eliminada</string>
    <string name="delete_data_error">Error al borrar. Intente nuevamente</string>
    <string name="msg_list_empty">Lista vacía</string>
    <string name="text_list_empty">No hay ítems en esta lista</string>
    <string name="btn_delete">Eliminar</string>
    <string name="btn_share">Compartir</string>
    <string name="btn_undo">Deshacer</string>
    <string name="text_deleting">Eliminando&#8230;</string>
    <string name="common_error_server">Ha ocurrido un problema en el servidor, intente más tarde.</string>
    <string name="method_not_exist">Error. Método no existe</string>

    <!--Fragment Inicio-->
    <string name="nav_inicio">Inicio</string>
    <string name="text_no_shopping">No ha realizado su primer mercado.</string>
    <string name="text_last_shopping_first_line">Su última compra fue realizada el %1$s.</string>
    <string name="text_last_shopping_second_line">Con un gasto total de $%1$s.</string>
    <string name="btn_new_shop">Nueva Compra</string>
    <string name="btn_new_lista">Crear Lista de compras</string>
    <string name="btn_new_product">Agregar Producto</string>
    <string name="btn_storage">Inventario</string>
    <string name="msg_sync">Sincronizando cotización actual</string>
    <string name="msg_sync_ok">Cotización actualizada</string>
    <string name="msg_sync_error">Error al actualizar cotización</string>

    <!--Fragment Shop-->
    <string name="nav_history">Historial de compras</string>

    <!--Dialog Add ListShop-->
    <string name="title_activity_add_list_shop">Nueva Compra</string>
    <string name="text_name_listShop">Nombre de la compra</string>
    <string name="text_cotizacion">Cotización (Bs./$)</string>
    <string name="text_agregar_lista">¿Desea agregar una Lista?</string>
    <string name="text_switch_off_shop_list">Incluir a la compra</string>
    <string name="text_switch_off_shop_product">Agregar al carrito</string>
    <string name="text_switch_off_to_storage_product">Agregar al inventario</string>
    <string name="text_switch_on_to_storage_product">Inventariado</string>
    <string name="text_switch_on_shop">Seleccionado</string>
    <string name="error_field_zero">Valor debe ser mayor a cero</string>
    <string name="error_name_repeated_storage">Ya agregó un producto con este nombre al inventario</string>
    <string name="text_list_belong">Lista: %1$s</string>
    <string name="text_cotizacion_from_shop">Cotización del día de la compra: Bs.%1$s</string>

    <!--Fragment Listas-->
    <string name="nav_lists">Mis listas de compras</string>
    <string name="text_item_in_list">Ítem(s): %1$s</string>
    <string name="title_dialog_share">Seleccione usuarios</string>
    <string name="error_user_share_null">Debe seleccionar un usuario</string>
    <string name="text_sharing_list">Enviando lista…</string>
    <string name="text_shared_from">Enviado por: %1$s</string>

    <!--Dialog Add ListWish-->
    <string name="btn_add_product">Agregar producto</string>
    <string name="text_name_listWish">Nombre de la Lista</string>
    <string name="text_total_list">Total $%1$s</string>
    <string name="text_total_price_item">$%1$s</string>
    <string name="text_quantity_total">%1$.1f %2$s</string>
    <string name="text_quantity">Cantidad</string>
    <string name="text_unit">Unidad</string>
    <string name="product_added">Producto ya estaba en la lista</string>
    <string name="quantity_available">Disp.: %1$s %2$s</string>

    <!--Fragment ListsShared-->
    <string name="nav_lists_shared">Listas compartidas</string>
    <string name="btn_add_user">Agregar usuario</string>


    <!--Fragment Products-->
    <string name="nav_products">Productos</string>

    <!--Dialog Add Products-->
    <string name="title_add_producto_dialog">Crear producto</string>
    <string name="text_product">Producto</string>
    <string name="error_spinner_units_position">Debe seleccionar un tipo de unidad</string>
    <string name="error_name_exists">Nombre existente</string>

    <!--Fragment Storage-->
    <string name="title_view_details_storage_dialog">Datos última compra</string>
    <string name="title_add_quantity_storage_dialog">Agregar cantidad</string>
    <string name="title_remove_quantity_storage_dialog">Remover cantidad</string>
    <string name="btn_remove">Descontar producto</string>
    <string name="text_products_remaining">Disponible: %1$s %2$s</string>
    <string name="text_products_from_shop">Cantidad: %1$s %2$s</string>
    <string name="text_date_last_shop">Fecha: %1$s</string>
    <string name="text_price_by_unit">Precio unitario: ($) %1$s</string>
    <string name="error_quantity_negative">No puede remover una cantidad mayor a la existente</string>

    <!--Dialog Edit Products from Lists-->
    <string name="title_edit_producto_dialog">Editar %1$s</string>
    <string name="symbol_bolivar">Bs.</string>
    <string name="symbol_dolar">$</string>
    <string name="text_price">Precio</string>
    <string name="text_bolivar">Bolívar</string>
    <string name="text_dolar">Dolar</string>

    <!--Dialog Exit-->
    <string name="title_confirmation_dialog">Confirmar</string>
    <string name="msg_exit_dialog">Se perderá toda la información.\n¿Desea salir?</string>

    <!--Dialog Shop-->
    <string name="msg_shop_dialog">Una vez totalizada la compra, no podrá editarla.\n¿Desea completar la compra?</string>
    <string name="btn_shop">Comprar</string>

    <!--Dialog Shop-->
    <string name="title_delete_dialog">¿Desea eliminar este ítem?</string>

    <!--Dialog Current Shop-->
    <string name="title_current_shop_dialog">¡Aviso!</string>
    <string name="msg_current_shop_dialog">Existe una Compra en proceso.\n¿Desea continuar con la Compra ya creada?</string>
    <string name="btn_yes_current_shop_dialog">Continuar Compra</string>
    <string name="btn_not_current_shop_dialog">Nueva Compra</string>

    <!--Fragment Deparments-->
    <string name="nav_deparments">Departamentos</string>
    <string name="text_deparment">Departamento</string>
    <string name="title_add_deparment_dialog">Crear departamento</string>
    <string name="title_edit_deparment_dialog">Editar departamento</string>

    <!--Ajustes-->
    <string name="nav_ajustes">Ajustes</string>
    <string name="title_profile">Personal</string>
    <string name="title_theme">Tema</string>
    <string name="title_delete_shops">Borrar historial de compras</string>
    <string name="text_about">Información de la App</string>
    <string name="message_dialog_delete_shops">Se eliminará el historial completo de todas las compras realizadas. Esta acción no se puede deshacer.\n¿Desea eliminarla?</string>
    <string name="about_title">Desarrollado por&#8230;</string>
    <string name="version_name">Versión %1$s</string>

    <!--New Features-->
    <string name="title_new_features">¡Próximamente!</string>
    <string name="msg_new_features">Esta opción estará disponible en la próxima versión</string>

    <!--Notifiacion-->
    <string name="topic_notification_user_id">idReceiver_%1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>