<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/nav_inicio" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_shopping_24"
            android:title="@string/nav_history" />
        <item
            android:id="@+id/nav_lists"
            android:icon="@drawable/ic_lists_shopping_24"
            android:title="@string/nav_lists" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_products_24"
            android:title="@string/nav_products" />

        <item android:title="@string/texto_vacio">
            <menu>

                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings_24"
                    android:title="@string/nav_ajustes"
                    />

            </menu>
        </item>
    </group>
</menu>