<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.skysam.hchirinos.go2shop.homeModule.ui.InicioFragment"
        android:label="@string/nav_inicio"
        tools:layout="@layout/fragment_inicio" >
        <action
            android:id="@+id/action_nav_home_to_storageFragment"
            app:destination="@id/storageFragment" />
        <action
            android:id="@+id/action_nav_home_to_configNewShopFragment"
            app:destination="@id/configNewShopFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_history"
        android:name="com.skysam.hchirinos.go2shop.shopsModule.ui.ShopFragment"
        android:label="@string/nav_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_lists"
        android:name="com.skysam.hchirinos.go2shop.listsModule.ui.ListsWishFragment"
        android:label="@string/nav_lists"
        tools:layout="@layout/fragment_lists" />
    <fragment
        android:id="@+id/storageFragment"
        android:name="com.skysam.hchirinos.go2shop.storageModule.ui.StorageFragment"
        android:label="fragment_storage"
        tools:layout="@layout/fragment_storage" >
        <action
            android:id="@+id/action_storageFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_products"
        android:name="com.skysam.hchirinos.go2shop.productsModule.ui.ProductsFragment"
        android:label="@string/nav_products"
        tools:layout="@layout/fragment_products" />
    <fragment
        android:id="@+id/configNewShopFragment"
        android:name="com.skysam.hchirinos.go2shop.shopsModule.ui.addListShop.ConfigNewShopFragment"
        android:label="fragment_config_new_shop"
        tools:layout="@layout/fragment_config_new_shop" >
        <action
            android:id="@+id/action_configNewShopFragment_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_configNewShopFragment_to_addListShopFragment"
            app:destination="@id/addListShopFragment" />
    </fragment>
    <fragment
        android:id="@+id/addListShopFragment"
        android:name="com.skysam.hchirinos.go2shop.shopsModule.ui.addListShop.AddListShopFragment"
        android:label="AddListShopFragment" >
        <action
            android:id="@+id/action_addListShopFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>