<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_product"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_price"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/rg_moneda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_price"
            android:inputType="numberDecimal"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:digits="0123456789.,"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rg_moneda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_name"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_dolar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/symbol_dolar"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rb_bolivar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/symbol_bolivar" />
    </RadioGroup>

    <ImageButton
        android:id="@+id/ib_rest_quantity"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/size_btn_item_list"
        android:layout_height="@dimen/size_btn_item_list"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/btn_cancel"
        android:src="@drawable/ic_neg_1_24"
        app:layout_constraintBottom_toBottomOf="@+id/tf_quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_price" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_quantity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/ib_add_quantity"
        app:layout_constraintStart_toEndOf="@+id/ib_rest_quantity"
        app:layout_constraintTop_toBottomOf="@id/tf_price">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_quantity"
            android:inputType="numberDecimal"
            android:maxLength="6"
            android:digits="0123456789,"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/ib_add_quantity"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/size_btn_item_list"
        android:layout_height="@dimen/size_btn_item_list"
        android:contentDescription="@string/btn_cancel"
        android:src="@drawable/ic_add_1_24"
        app:layout_constraintBottom_toBottomOf="@+id/tf_quantity"
        app:layout_constraintEnd_toStartOf="@+id/rg_moneda"
        app:layout_constraintTop_toBottomOf="@+id/tf_price" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_quantity" />

    <Spinner
        android:id="@+id/spinnerDeparment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        android:indeterminate="true"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>