<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homeModule.ui.home.InicioFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:text="@string/text_last_shopping"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/guide_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.25"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_new_shop"
        android:layout_width="@dimen/width_btn_home"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btn_new_shop"
        android:textAllCaps="false"
        app:icon="@drawable/ic_add_shopping_24"
        app:layout_constraintEnd_toStartOf="@+id/guide_line2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_home" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_new_list"
        android:layout_width="@dimen/width_btn_home"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btn_new_lista"
        android:textAllCaps="false"
        app:icon="@drawable/ic_add_list_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guide_line2"
        app:layout_constraintTop_toBottomOf="@+id/text_home" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_new_product"
        android:layout_width="@dimen/width_btn_home"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guide_line2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide_line"
        android:text="@string/btn_new_product"
        android:textAllCaps="false"
        app:icon="@drawable/ic_add_product_24"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_inventory"
        android:layout_width="@dimen/width_btn_home"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guide_line2"
        app:layout_constraintTop_toBottomOf="@+id/guide_line"
        android:text="@string/btn_storage"
        android:textAllCaps="false"
        app:icon="@drawable/ic_storage_24"/>
</androidx.constraintlayout.widget.ConstraintLayout>